--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-icons": "^4.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^4.0.3",
     "react-social-login-buttons": "^3.4.0",
     "reactstrap": "^8.9.0",
     "web-vitals": "^1.0.1"
